# open-world-2026

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
src/: camera.rs  main.rs  player.rs  world.rs
src/terrain/: chunk_manager.rs  deform.rs  gen.rs  marching_cubes.rs  mesh.rs  mod.rs
